@@ -90,7 +90,7 @@
         <dependency>
             <groupId>io.swagger.core.v3</groupId>
             <artifactId>swagger-integration</artifactId>
-            <version>2.0.8</version>
+            <version>2.0.9</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.fasterxml.jackson.core</groupId>
@@ -149,13 +149,13 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.26</version>
+            <version>1.7.28</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>com.truthbean.debbie</groupId>
-            <artifactId>debbie-tomcat</artifactId>
+            <artifactId>debbie-netty</artifactId>
             <version>0.0.2-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
@@ -176,7 +176,7 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
-            <version>2.11.2</version>
+            <version>2.12.1</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
@@ -197,6 +197,9 @@
                 <configuration>
                     <release>11</release>
                     <encoding>UTF-8</encoding>
+                    <compilerArgs>
+                        <arg>-J--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -235,7 +238,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
-                <version>3.7.1</version>
+                <version>3.8.2</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -256,7 +259,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.1.0</version>
+                <version>3.1.1</version>
                 <configuration>
                     <attach>true</attach>
                     <charset>UTF-8</charset>
